🔨 :hammer: [Fix] Too much padding on desktop

--- a/src/components/CreatePost/ElementList/style.module.css
+++ b/src/components/CreatePost/ElementList/style.module.css
@@ -17,3 +17,9 @@
     font-size: 14px;
   }
 }
+
+@media (max-width: 1000px) {
+  .elementList {
+    padding: 0;
+  }
+}
